--- a/fban-user/src/main/resources/application.properties
+++ b/fban-user/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.application.name=oauth-api
+spring.application.name=fban-user
+
+spring.profiles.active=test
+spring.config.import=optional:configserver:http://localhost:8888
+
 server.port=${PORT:0}
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 eureka.client.service-url.defaultZone=http://localhost:8070/eureka
-
-spring.cloud.config.uri=http://localhost:8888
-
-management.endpoints.web.exposure.include=*
 
