Files moved. Initial front end setup

--- a/fban microservices/fban-transaction/src/main/resources/application.properties
+++ b/fban microservices/fban-transaction/src/main/resources/application.properties
@@ -10,3 +10,13 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 eureka.client.service-url.defaultZone=http://localhost:8070/eureka
 
 
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.defer-datasource-initialization=true
