--- a/fban microservices/fban-transaction/src/main/resources/application.properties
+++ b/fban microservices/fban-transaction/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=fban-transaction
 
-spring.profiles.active=test
+#spring.profiles.active=test
 spring.config.import=optional:configserver:http://localhost:8888
 
 server.port=${PORT:0}
@@ -10,7 +10,7 @@ eureka.instance.instance-id=${spring.application.name}:${spring.application.inst
 eureka.client.service-url.defaultZone=http://localhost:8070/eureka
 
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb2;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 
