--- a/fban-front/package.json
+++ b/fban-front/package.json
@@ -13,6 +13,7 @@
     "@types/react-input-mask": "^3.0.1",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.24.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
